2004-01-27  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added -q option for fusermount

	* fuse_unmount() now uses -q option of fusermount, so no error is
	printed if the cause of the program exit is that the filesystem
	has already been unmounted

	* Fix i_nlink correctness after rmdir/unlink

2004-01-26  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Released 1.1-pre2

2004-01-26  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix typo (thanks Marcos Dione)

	* Compile fixes for 2.4 kernels
	
2004-01-23  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix CONFIG_MODVERSIONS compile on 2.6
	
2004-01-22  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Write all pending data before a RELEASE operation

	* Suppress 'Bad file descriptor' warning on exit

	* Replaced fusermount option '-d xxx' with '-n xxx' so it doesn't
	get confused with '-d' of fuse_main() (sorry about this change)

	* New fusermount option '-l' which enables big reads.  Big reads
	are now disabled by default.

	* fuse_main() can accept fusermount arguments after a '--'

2004-01-19  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Support for exporting filesystem over NFS (see README.NFS)

2004-01-14  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Support non-blocking writepage on 2.6.  This makes FUSE behave
	much more nicely in low-memory situations

	* Fix 32-bit dev handling in getattr and mknod for 2.6 kernels.
	(Note: the mknod method does not yet use 32bit device number)
 
2004-01-13  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Code cleanups

2004-01-07  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Released 1.1-pre1

2004-01-06  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Integrated 2.6 kernel support patch by Michael Grigoriev

	* Improvements and cleanups for 2.6 kernels

2004-01-05  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added -d option to fusermount 

2003-12-15  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added major+minor version to library API, and minor version to
	  kernel API

2003-12-13  David McNab <david@rebirthing.co.nz>
